# tutorial_dots

./: README.md
cpp2/: CMakeLists.txt
cpp2/Debug/: CMakeCache.txt  cmake_install.cmake
cpp2/Debug/lib/googletest/: Makefile
cpp2/Debug/lib/googletest/googlemock/: CTestTestfile.cmake  Makefile
cpp2/Debug/tst/: Makefile
cpp2/include/: Blah.h
cpp2/src/: main.cpp
cpp2/tst/: BlahTest.cpp
mmo/: README.md
mmo/Debug/: Makefile  compile_commands.json  hello
mmo/Debug/lib/googletest/: CTestTestfile.cmake  cmake_install.cmake
mmo/Debug/lib/googletest/googlemock/: cmake_install.cmake
mmo/Debug/lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mmo/Debug/tst/: cmake_install.cmake  hello_tst
mmo/tst/: CMakeLists.txt
tmux/: .tmux.conf
vimwiki_2/nvim/: init.vim
vimwiki_2/nvim/after/syntax/: vimwiki.vim
